<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">EyobConnect</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="fp_instructions">Enter the email that was used during Registration</string>
    <string name="prof_settings">Profile Settings</string>
    <string name="notifications">Notification</string>
    <string name="invite">Invite</string>
    <string name="help">Help</string>
    <string name="fav">Favorites</string>
    <string name="message">Message</string>
    <string name="address">Adress</string>
    <string name="phone">08165483162</string>
    <string name="dummy_name">Ukoh Princewill</string>
    <string name="dummy_email">jackwilson@gmail.com</string>
    <string name="pro">Ekemini Eshiet\'s Profile</string>
    <string name="plaintext">Android Developer at Start Innovation Hub, graduate of Departmeent of Geography and Natural Resources Management, at the University Uyo in 2018.</string>
    <string name="about">About</string>
    <string name="following">Following</string>
    <string name="phone_number">08165483162</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="bio">Android Developer at Start Innovation Hub, graduate of Departmeent of Geography and Natural Resources Management, at the University Uyo in 2018. He hails from Akwa Ibom State and is committed to proferring solutions with technology.</string>
    <string name="edit">Edit</string>
    <string name="description">Palm Oil is used for food Products, detergents, cosmetics and increasingly, bio-fuel. Global Production of palm oil  has doubled over years. Palm oil procced  locally in such a way that maintains it nutritional value.</string>
    <string name="quantity">Quantity</string>
    <string name="addtocart">Add to Cart</string>
    <string name="proceed">Proceed to Checkout</string>
    <string name="order_summary">Order Summary</string>
    <string name="amount">Amount</string>
    <string name="checkout">CHECKOUT</string>
    <string name="empty_view">No Items in Your Cart</string>
    <string name="likes">Likes</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="order">My Orders</string>
</resources>
