<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="Home" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/message"
            android:title="Notifications" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/reorder"
            android:title="@string/order" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/favorite"
            android:title="Favourites" />

    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="Share with a Friend" />


            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout"/>

        </menu>
    </item>

</menu>
