<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="393dp"
        android:layout_height="139dp"
        android:background="#1dab40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </android.support.constraint.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="202dp"
        android:layout_height="148dp"
        android:layout_marginBottom="380dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="344dp"
        android:layout_height="38dp"
        android:layout_marginBottom="204dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#19711e"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColorHint="#19711e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginBottom="284dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#19711e"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColorHint="#19711e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="344dp"
        android:layout_height="38dp"
        android:layout_marginBottom="244dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#19711e"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColorHint="#19711e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="344dp"
        android:layout_height="38dp"
        android:layout_marginBottom="164dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#19711e"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColorHint="#19711e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="344dp"
        android:layout_height="38dp"
        android:layout_marginBottom="332dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#19711e"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColorHint="#19711e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="344dp"
        android:layout_height="38dp"
        android:layout_marginBottom="124dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#19711e"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColorHint="#1dab40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="106dp"
        android:layout_height="29dp"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_bg"
        android:text="@string/save"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="454dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="394dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/grass" />


</android.support.constraint.ConstraintLayout>