<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/cart_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cartt"/>

        <TextView
            android:id="@+id/empty_cart"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_view"
            android:layout_marginTop="390dp"
            android:textSize="30sp"
            android:textStyle="bold" />



        <LinearLayout
            android:id="@+id/main_layout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:id="@+id/orderRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#c2bfbf" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_summary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#c2bfbf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/amount"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/amount_textView"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/quantity"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/quantity_textView"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#c2bfbf" />

            <Button
                android:layout_margin="15dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/checkout"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
